# LelegIPTV

./: .gitignore  CONTRIBUTING.md  SECURITY.md  astro.config.mjs  deploy-remote.sh  deploy.sh  docker-compose.yml  package.json  pnpm-lock.yaml  privacy_policy.md  readme.md  ssh-key-2025-11-23.key.pub  wrangler.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
deploy/: nginx.conf
dev-dist/: sw.js  workbox-50bb6711.js  workbox-73bde303.js
docs/: AI_AGENT_GUIDE.md  NATIVE_PLAYBACK_STRATEGY.md  astro.config.mjs  deploy-web.md  installazione-dispositivi.html  package.json
docs-site/: astro.config.mjs  package.json  pnpm-lock.yaml
functions/: __stream.ts  _stream-proxy.ts
scripts/: build-all.mjs  clean-stale-dmg.sh  install-macos-flutter-debug.sh  kill-dev-server.sh  open-macos-logs.sh  prepare-tizen.mjs  stream-proxy.mjs  sync-brand-icons.sh  tizen-dev-server.mjs
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: external_player.rs  lib.rs  media_proxy.rs  native_mpv_macos.rs  native_playback.rs  tray.rs
src-tauri/tests/: http_scope_loopback.rs
tests/: embedded-hls-audio.test.ts  embedded-media-fetch.test.ts  embedded-vod-playback.test.ts  epg-data.test.ts  hls-live-playlist-trim.test.ts  live-container.test.ts  live-replay-url.test.ts  live-stream-url.test.ts  m3u8-proxy-rewrite.test.ts  media-track-labels.test.ts  playback-session.test.ts  player-runtime.test.ts  player-shaka-vod.test.ts  pwa-install.test.ts  stream-proxy.test.ts  stream-user-agent.test.ts  vod-subtitle-tracks.test.ts  vtt-stream-parser.test.ts
www/: index.html
(+170 files in other folders)
