[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "cookies"] }
tauri = { version = "2.11", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
libmpv2 = { version = "5", features = ["render"] }
raw-window-handle = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
discord-rich-presence = "0.2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
dispatch = "0.2"
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = { version = "=28.1.0", features = [] }
android_logger = "0.15"
ctor = "0.2"

[dev-dependencies]
url = "2"
regex = "1"
urlpattern = "0.3"
